--- a/src/index.css
+++ b/src/index.css
@@ -298,3 +298,58 @@ body {
   text-decoration: underline;
   color: red;
 }
+.switch-div{
+  position: relative;
+  left: 450px;
+}
+input[type="checkbox"] {
+  visibility: hidden;
+}
+
+.switch-label {
+  display: block;
+  width: 80px;
+  height: 36px;
+  background-color: grey;
+  border-radius: 100px;
+  position: relative;
+  cursor: pointer;
+  left: 30px;
+  bottom: 50px;
+  box-shadow: 0 0 50px black;
+}
+.switch-ball{
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  height: 30px;
+  width: 30px;
+  transition: 0.5s;
+}
+.checkbox:checked + .switch-label .switch-ball{
+  transform: translateX(44px);
+}
+.checkbox:checked + .switch-label{
+  background-color: green;
+
+}
+
+.dark {
+  background-color: rgb(31, 30, 30);
+  color: white;
+}
+.todoapp{
+  transition: 1s;
+}
+.clearAll{
+  display: block;
+  background-color: rgb(202, 60, 60);
+  color: white;
+  width: 300px;
+  height: 25px;
+  cursor: pointer;
+}
+
+
